# hxournalclip-type

./: hxournalclip-type.cabal
lib/Application/HXournal/NetworkClipboard/: Type.hs
lib/Application/Hxournal/NetworkClipboard/: Type.hs
