Name:		hxournalclip-type
Version:	0.0
Synopsis:	CRUD sample type 
Description: 	CRUD sample type 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*, 
                   mtl == 2.*, 
                   uuid == 1.2.*,
                   containers == 0.4.*, 
                   safecopy == 0.6.*, 
                   acid-state == 0.6.*, 
                   bytestring == 0.9.*, 
                   text == 0.11.*, 
                   aeson==0.4.*
  exposed-modules: Application.Hxournal.NetworkClipboard.Type